--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    cursor: pointer;
 }
 .item img{
     width: 100%;
