--- a/src/components/listMyOrder/item/style.css
+++ b/src/components/listMyOrder/item/style.css
@@ -25,7 +25,7 @@ background-color: antiquewhite;}
 .item-notifi p{
     margin-bottom: 0;
 }
-.anticon ,.anticon-close-square{
+.anticon-close-square{
     color: red !important;
     font-size: 15px;
     cursor: pointer;
