--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -1,47 +1,52 @@
 .item {
-  margin: 0 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  cursor: pointer;
+	margin: 0 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	cursor: pointer;
 }
 .item img {
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 100%;
 }
 .item__center {
-  transition: 0.5s;
+	transition: 0.5s;
 }
 .add__cart {
-  transition: 0.5s;
-  visibility: hidden;
-  opacity: 0;
-  cursor: pointer;
+	transition: 0.5s;
+	visibility: hidden;
+	opacity: 0;
+	cursor: pointer;
 }
 .item__center:hover .add__cart {
-  opacity: 1;
-  visibility: visible;
+	opacity: 1;
+	visibility: visible;
 }
 .item__center:hover {
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 40px;
+	box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 40px;
 }
 .item .add__cart {
-  padding: 10px 50px;
-  color: rgb(250, 247, 247);
-  font-weight: 800;
-  background: #fa362f;
-  margin-bottom: 30px;
+	padding: 10px 50px;
+	color: rgb(250, 247, 247);
+	font-weight: 800;
+	background: #fa362f;
+	margin-bottom: 30px;
 }
 .item .price {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 .item .order {
-  font-weight: 700;
-  margin-bottom: 0;
+	font-weight: 700;
+	margin-bottom: 0;
 }
 .item .old {
-  color: #555;
+	color: #555;
+}
+
+.image[class] {
+	width: 261px;
+	height: 261px;
 }
